# virtual-avatar-connect

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  conf.example--run-with.toml  conf.example-bouyomichan.toml  conf.example-coeiroink.toml  conf.example-command.toml  conf.example-gas-translation.toml  conf.example-modify.toml  conf.example-openai-chat.toml  conf.example-os-tts.toml  conf.example-ss-ocr.toml  conf.example-twitch.toml  conf.toml  dictionary.arknights.txt  dictionary.chat.txt  dictionary.pre-coeiroink.txt  regex.chat.csv  regex.pre-command.txt
.github/: FUNDING.yml
.website/: index.html
docs/: CONTRIBUTING.md  README.md  a-search.js  a-url.js  dark-mode.css  dark-mode.js  img-show.css  img-show.js  index.css  index.html  index.js  scroll-to.js  toggle.css
input/: index.html
output/: 2-ch-mix.html  ai.html  auto-reload-web.html  chat.html  index.html  title.html  user.html
resources/: api.js  input.css  input.image.js  input.js  input.lang_codes.js  input.post.js  input.voice.js  output.css  output.js
resources/css/: 2-ch-mix.css  brb.css  input.css  loading.css  output.css  output.old.css  play.css  title.css
resources/css/common/: background-mask.css  danger-zone.css  dark-mode.css  flex-stack-from-bottom.css  font.css  moco-moji.css  reset.css
resources/js/: 2-ch-mix.js  api.js  brb.js  input.image.js  input.js  input.voice.js  loading.js  output.js  play.js  scene.js
resources/js/common/: ensure.js  escape.js  image.js  lang_code.js  number.js
src/: ai.rs  args.rs  error.rs  lib.rs  logger.rs  main.rs  message.rs  resource.rs  utility.rs
src/args/: mod.rs  sm_with_conf.rs  sm_without_conf.rs
src/conf/: mod.rs  processor_conf.rs
src/processor/: bouyomichan.rs  coeiroink.rs  command.rs  gas_translation.rs  mod.rs  modify.rs  openai_chat.rs  os_tts.rs
src/processor/ocr/: data_urls.rs  local.rs  mod.rs  web.rs
src/processor/openai_chat/: mod.rs
src/processor/openai_chat/fine_tuning/: mod.rs  types.rs  utility.rs
src/processor/screenshot/: mod.rs  ops.rs  windows.rs
src/state/: channel_datum.rs  mod.rs
src/web_interface/: input.rs  mod.rs  output.rs  status.rs  ws.rs
tests/: conf.rs  j.rs  os_tts.rs  ws_server_payload.rs
