[package]
name = "virtual-avatar-connect"
version = "0.2.0"
edition = "2021"

[lib]
name = "virtual_avatar_connect"
path = "src/lib.rs"

[[bin]]
name = "virtual-avatar-connect"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.14.1"
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
env_logger = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
rand = "0.8.5"
actix-web = "4.4.0"
actix = "0.13.1"
thiserror = "1.0.48"
reqwest = "0.11.20"
rodio = "0.17.1"
num_cpus = "1.16.0"
chrono = { version = "0.4.31", features = ["serde"] }
actix-files = "0.6.2"
urlencoding = "2.1.3"
# https://github.com/usagi/virtual-avatar-connect/issues/13
# tts = "0.25.6"
tts = { git = "https://github.com/Bear-03/tts-rs", branch = "synthesize" }
async-trait = "0.1.73"
ron = "0.8.1"
regex = "1.9.5"
actix-web-actors = "4.2.0"
win_ocr = "0.1.3"
screenshot-rs = "0.1.5"
screenshots = "0.8.3"
image = "0.24.7"
base64 = "0.21.4"
unic-langid = "0.9.1"
async-tempfile = "0.4.0"
mime = "0.3.17"
mime_guess = "2.0.4"
alkana-rs = "0.1.0"
whatlang = "0.16.3"
isolang = { version = "2.3.0", features = ["list_languages"] }

# Windows Only
[target.'cfg(windows)'.dependencies]
win-screenshot = "4.0.5"
windows = { version = "0.51.1", features = [
 "Media_Ocr",
 "Win32_System_SystemServices",
 "Storage_Streams",
 "Foundation_Collections",
 "Globalization",
] }
winapi = { version = "0.3.9", features = ["wincodec"] }
