[package]
name = "virtual-avatar-connect"
version = "0.6.0"
edition = "2021"
build = "build.rs"

[lib]
name = "virtual_avatar_connect"
path = "src/lib.rs"

[[bin]]
name = "virtual-avatar-connect"
path = "src/main.rs"

[dependencies]
async-openai = "0.28.0"
actix = "0.13.1"
thiserror = "1.0.48"
reqwest = { version = "0.12.3", features = ["multipart", "json"] }
rodio = "0.17.1"
num_cpus = "1.16.0"
chrono = { version = "0.4.31", features = ["serde"] }
actix-files = "0.6.2"
urlencoding = "2.1.3"
# https://github.com/usagi/virtual-avatar-connect/issues/13
# tts = "0.25.6"
tts = { git = "https://github.com/Bear-03/tts-rs", branch = "synthesize" }
async-trait = "0.1.73"
ron = "0.8.1"
regex = "1.9.5"
actix-web-actors = "4.2.0"
win_ocr = "0.1.3"
screenshot-rs = "0.1.5"
screenshots = "0.8.3"
image = "0.25.1"
base64 = "0.22.0"
unic-langid = "0.9.1"
async-tempfile = "0.5.0"
mime = "0.3.17"
mime_guess = "2.0.4"
alkana-rs = "0.1.0"
whatlang = "0.16.3"
isolang = { version = "2.3.0", features = ["list_languages"] }
os_info = "3.7.0"
async-recursion = "1.0.5"
sysinfo = "0.30.9"
webbrowser = "0.8.12"
duct = "0.13.6"
runas = "1.1.0"
csv-async = { version = "1.2.6", features = ["tokio"] }
futures = "0.3.28"
twitch-irc = "5.0.1"
csv = "1.3.0"

# Windows Only
[target.'cfg(windows)'.dependencies]
win-screenshot = "4.0.5"
windows = { version = "0.51.1", features = [
 "Media_Ocr",
 "Win32_System_SystemServices",
 "Storage_Streams",
 "Foundation_Collections",
 "Globalization",
] }
winapi = { version = "0.3.9", features = ["wincodec"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
