[package]
name = "virtual-avatar-connect"
version = "0.8.0"
edition = "2021"
build = "build.rs"

[lib]
name = "virtual_avatar_connect"
path = "src/lib.rs"

[[bin]]
name = "virtual-avatar-connect"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
async-openai = "0.29.2"
clap = { version = "4.5.47", features = ["derive"] }
clap_lex = "0.7.5"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
env_logger = "0.11.8"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
rand = "0.9.2"
actix-web = "4.11.0"
actix = "0.13.5"
thiserror = "2.0.16"
reqwest = { version = "0.12.23", features = ["multipart", "json"] }
rodio = "0.21.1"
num_cpus = "1.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
actix-files = "0.6.7"
urlencoding = "2.1.3"
# https://github.com/usagi/virtual-avatar-connect/issues/13
# tts = "0.25.6"
tts = { git = "https://github.com/Bear-03/tts-rs", branch = "synthesize" }
async-trait = "0.1.89"
ron = "0.11.0"
regex = "1.11.2"
actix-web-actors = "4.3.0"
win_ocr = "0.1.3"
screenshot-rs = "0.1.5"
screenshots = "0.8.10"
image = "0.25.8"
base64 = "0.22.1"
unic-langid = "0.9.6"
async-tempfile = "0.7.0"
mime = "0.3.17"
mime_guess = "2.0.5"
alkana-rs = "0.1.0"
whatlang = "0.16.4"
isolang = { version = "2.4.0", features = ["list_languages"] }
os_info = "3.12.0"
async-recursion = "1.1.1"
sysinfo = "0.37.0"
webbrowser = "1.0.5"
duct = "1.1.0"
runas = "1.2.0"
csv-async = { version = "1.3.1", features = ["tokio"] }
futures = "0.3.31"
twitch-irc = "5.0.1"
csv = "1.3.1"

# Windows Only
[target.'cfg(windows)'.dependencies]
win-screenshot = "4.0.13"
windows = { version = "0.61.3", features = [
 "Media_Ocr",
 "Win32_System_SystemServices",
 "Win32_Graphics",
 "Win32_Graphics_Gdi",
 "Win32_Storage",
 "Win32_Storage_Xps",
 "Win32_UI",
 "Win32_UI_HiDpi",
 "Win32_UI_WindowsAndMessaging",
 "Storage_Streams",
 "Foundation_Collections",
 "Globalization",
 "Graphics",
 "Graphics_Imaging",
] }
winapi = { version = "0.3.9", features = ["wincodec"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
